adding API TOken manager test