@@ -14,6 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>22</maven.compiler.source> <!-- Update source to 22 -->
     <maven.compiler.target>22</maven.compiler.target> <!-- Update target to 22 -->
+    <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
   </properties>
 
   <dependencies>
@@ -27,6 +28,18 @@
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
         <version>20240303	</version> <!-- Updated version -->
+    </dependency>
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-rules</artifactId>
+      <version>1.19.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-lambda</artifactId>
+      <version>1.2.1</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
@@ -46,10 +59,10 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
-        <plugin>
+        <!-- <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
-        </plugin>
+        </plugin> -->
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
@@ -69,6 +82,14 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.2</version>
+          <configuration>
+              <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
